05-kubernetes_eks/alb-ingress-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment-alb
  name: nginx-deployment-alb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deployment-alb
  template:
    metadata:
      labels:
        app: nginx-deployment-alb
    spec:
      containers:
      - image: nginx:latest
        name: nginx
