05-kubernetes_eks/alb-ingress-controller/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-alb
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx-deployment-alb
